# math-learning-platform

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
apps/backend/: .env.example  alembic.ini  pyproject.toml  render.yaml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_initial_tables.py  f714bb18793a_add_code_auth_tables.py
apps/backend/app/: main.py
apps/backend/app/api/: router.py
apps/backend/app/core/: auth_codes.py  config.py  logging.py  security.py
apps/backend/app/db/: base.py  base_class.py  session.py
apps/backend/app/models/: __init__.py  access_code.py  auth_device.py  auth_session.py  practice_session.py  question_attempt.py
apps/backend/app/repositories/: practice_session_repository.py  question_attempt_repository.py  stats_repository.py
apps/backend/app/schemas/: auth.py  question.py  session.py  validation.py
apps/backend/app/scripts/: create_access_code.py
apps/backend/app/services/: auth_service.py  practice_session_service.py  question_service.py  stats_service.py
apps/backend/app/services/explanations/: explanation_builder.py
apps/backend/app/services/generators/: algebra_expressions.py  algebra_formulas.py  integer_operations.py  registry.py
apps/backend/app/services/validation/: algebra_expressions.py  algebra_formulas.py  integer_operations.py  (+1 more)
apps/backend/app/utils/: algebra.py  randomness.py  responses.py
apps/backend/math_learning_platform_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/backend/tests/: test_api_smoke.py  test_generators_and_validation.py
(+49 files in other folders)
